# pydb

./: README.md  pyproject.toml
src/: README.md
src/mydb/file/: monolith.py  segment.py
src/mydb/interface/: file.py
src/pydb/: README.md
src/pydb/config/: README.md  __init__.py  exceptions.py
src/pydb/core/: README.md
src/pydb/core/file/: README.md
src/pydb/core/index/: README.md  in_memory.py
src/pydb/core/storage/: README.md  logger.py
src/pydb/file/: monolith.py  segment.py
src/pydb/index/: in_memory.py
src/pydb/interface/: README.md
src/pydb/storage/: logger.py
tests/storage/: test_index.py  test_logger.py
